--- a/index.html
+++ b/index.html
@@ -1,9 +1,22 @@
-<!DOCTYPE>
+<!DOCTYPE html>
 <html>
-  <head>
-    <title> Webpack setup </title> 
-  </head> 
-  <body>
-    <div id="app"></div>
-  </body>
+
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
+  <meta http-equiv="Content-type" content="text/html; charset=utf-8">
+  <meta charset="utf-8">
+  <link href="https://fonts.googleapis.com/css?family=Catamaran&display=swap" rel="stylesheet">
+  <title>SSR Guide </title>
+</head>
+<style>
+  body {
+    font-family: 'Catamaran', sans-serif;
+  }
+</style>
+
+<body>
+  <div id="app"></div>
+
+</body>
+
 </html>
